# rusttools

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
b64tohex/: Cargo.toml
b64tohex/src/: main.rs
b64url/: Cargo.toml
b64url/src/: main.rs
biggest/: Cargo.toml
biggest/src/: main.rs
bintool/: Cargo.toml
bintool/src/: main.rs
dq/: Cargo.toml  README.md
dq/src/: main.rs
dsha256/: Cargo.toml
dsha256/src/: main.rs
finddupes/: Cargo.toml
finddupes/src/: main.rs
hamming/: Cargo.toml
hamming/src/: main.rs
hexify/: Cargo.toml
hexify/src/: main.rs
ktor/: Cargo.toml
ktor/src/: main.rs
l2du/: Cargo.toml
l2du/src/: main.rs
lc/: Cargo.toml
lc/src/: main.rs
longest/: Cargo.toml
longest/src/: main.rs
rando/: Cargo.toml
rando/src/: main.rs
spicnspan/: Cargo.toml
spicnspan/src/: main.rs
summ/: Cargo.toml
summ/src/: main.rs
uc/: Cargo.toml
uc/src/: main.rs
where/: Cargo.toml
where/src/: main.rs  where.rb
